--- a/clusters/main/kubernetes/apps/rocket-life-dev/app/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/rocket-life-dev/app/kustomization.yaml
@@ -2,6 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - chatbot-helm-release.yaml
-  - landing-helm-release.yaml
-  - quote-engine-helm-release.yaml
+  - helm-release.yaml
