--- a/clusters/main/kubernetes/apps/rocket-life-dev/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/rocket-life-dev/app/helm-release.yaml
@@ -112,6 +112,11 @@ spec:
               env:
                 NEXT_PUBLIC_APP_URL: "https://app-dev.${DOMAIN_4}"
               probes:
+                startup:
+                  enabled: true
+                  type: http
+                  path: /
+                  port: 3001
                 liveness:
                   enabled: true
                   type: http
@@ -150,6 +155,11 @@ spec:
                 FRONTEND_URL: "https://app-dev.${DOMAIN_4}"
                 BACKEND_URL: "https://api-dev.${DOMAIN_4}"
               probes:
+                startup:
+                  enabled: true
+                  type: http
+                  path: /health
+                  port: 8000
                 liveness:
                   enabled: true
                   type: http
@@ -175,6 +185,11 @@ spec:
                 NEXT_PUBLIC_SUPABASE_URL: "${ROCKET_SUPABASE_URL}"
                 NEXT_PUBLIC_SUPABASE_ANON_KEY: "${ROCKET_SUPABASE_ANON_KEY}"
               probes:
+                startup:
+                  enabled: true
+                  type: http
+                  path: /
+                  port: 3000
                 liveness:
                   enabled: true
                   type: http
