--- a/clusters/main/kubernetes/apps/rocket-life-dev/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/rocket-life-dev/app/helm-release.yaml
@@ -52,15 +52,23 @@ spec:
       main:
         type: ClusterIP
         ports:
-          landing:
-            port: 3001
+          http:
+            port: 8080
             targetPort: 3001
             protocol: http
-          quote-engine:
+      quote-engine:
+        enabled: true
+        type: ClusterIP
+        ports:
+          http:
             port: 8000
             targetPort: 8000
             protocol: http
-          chatbot:
+      chatbot:
+        enabled: true
+        type: ClusterIP
+        ports:
+          http:
             port: 3000
             targetPort: 3000
             protocol: http
@@ -71,14 +79,23 @@ spec:
         ingressClassName: external
         hosts:
           - host: dev.${DOMAIN_4}
+            service:
+              name: rocket-life-dev-main
+              port: http
             paths:
               - path: /
                 pathType: Prefix
           - host: api-dev.${DOMAIN_4}
+            service:
+              name: rocket-life-dev-quote-engine
+              port: http
             paths:
               - path: /
                 pathType: Prefix
           - host: app-dev.${DOMAIN_4}
+            service:
+              name: rocket-life-dev-chatbot
+              port: http
             paths:
               - path: /
                 pathType: Prefix
