--- a/clusters/main/kubernetes/apps/rocket-life-dev/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/rocket-life-dev/app/helm-release.yaml
@@ -50,9 +50,11 @@ spec:
 
     service:
       main:
+        enabled: true
         type: ClusterIP
         ports:
           http:
+            enabled: true
             port: 8080
             targetPort: 3001
             protocol: http
@@ -61,6 +63,7 @@ spec:
         type: ClusterIP
         ports:
           http:
+            enabled: true
             port: 8000
             targetPort: 8000
             protocol: http
@@ -69,6 +72,7 @@ spec:
         type: ClusterIP
         ports:
           http:
+            enabled: true
             port: 3000
             targetPort: 3000
             protocol: http
