--- a/clusters/main/kubernetes/apps/rocket-life-prod/app/chatbot-helm-release.yaml
+++ b/clusters/main/kubernetes/apps/rocket-life-prod/app/chatbot-helm-release.yaml
@@ -9,8 +9,8 @@ spec:
   interval: 15m
   chart:
     spec:
-      # chart: app-template
-      # version: 15.29.8
+      chart: app-template
+      version: 15.29.8
       sourceRef:
         kind: HelmRepository
         name: truecharts
