--- a/clusters/main/kubernetes/apps/rocket-life-dev/app/landing-helm-release.yaml
+++ b/clusters/main/kubernetes/apps/rocket-life-dev/app/landing-helm-release.yaml
@@ -3,8 +3,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: rocket-life-prod
-  namespace: rocket-life-prod
+  name: rocket-landing-dev
+  namespace: rocket-life-dev
 spec:
   interval: 15m
   chart:
@@ -29,8 +29,6 @@ spec:
   uninstall:
     keepHistory: false
 
-  dependsOn: []
-
   values:
     global:
       stopAll: false
@@ -39,13 +37,13 @@ spec:
     resources:
       requests:
         cpu: 50m
-        memory: 256Mi
+        memory: 128Mi
       limits:
-        memory: 512Mi
+        memory: 256Mi
 
     image:
-      repository: docker.${DOMAIN_1}/rocket-life/app
-      tag: prod
+      repository: docker.${DOMAIN_1}/rocket-life/landing
+      tag: dev
       pullPolicy: Always
 
     securityContext:
@@ -60,20 +58,17 @@ spec:
         type: ClusterIP
         ports:
           main:
-            port: 3000
-            targetPort: 3000
+            port: 3001
+            targetPort: 3001
             protocol: http
 
+    # Ingress configuration for dev.${DOMAIN_4}
     ingress:
       main:
         enabled: true
         ingressClassName: external
         hosts:
-          - host: app.${DOMAIN_4}
-            paths:
-              - path: /
-                pathType: Prefix
-          - host: www.${DOMAIN_4}
+          - host: dev.${DOMAIN_4}
             paths:
               - path: /
                 pathType: Prefix
@@ -88,44 +83,15 @@ spec:
           containers:
             main:
               env:
-                DATABASE_URL:
-                  secretKeyRef:
-                    name: cnpg-main-urls
-                    key: std
-                OPENAI_API_KEY: "${ROCKET_OPENAI_API_KEY}"
-                OPENAI_MODEL: "gpt-5.1"
-                SUPABASE_URL: "${ROCKET_PROD_SUPABASE_URL}"
-                SUPABASE_ANON_KEY: "${ROCKET_PROD_SUPABASE_ANON_KEY}"
-                SUPABASE_JWT_SECRET: "${ROCKET_PROD_SUPABASE_JWT_SECRET}"
-                SUPABASE_SERVICE_KEY: "${ROCKET_PROD_SUPABASE_SERVICE_KEY}"
-                HUBSPOT_ACCESS_TOKEN: "${ROCKET_HUBSPOT_ACCESS_TOKEN}"
-                DOCUSEAL_API_KEY: "${ROCKET_DOCUSEAL_API_KEY}"
-                DOCUSEAL_BASE_URL: "${ROCKET_DOCUSEAL_BASE_URL}"
-                DOCUSEAL_EAPP_TEMPLATE_ID: "${ROCKET_DOCUSEAL_EAPP_TEMPLATE_ID}"
-                FRONTEND_URL: "https://app.${DOMAIN_4}"
-                BACKEND_URL: "https://api.${DOMAIN_4}"
+                NEXT_PUBLIC_APP_URL: "https://app-dev.${DOMAIN_4}"
               probes:
-                startup:
-                  enabled: true
-                  type: http
-                  path: /
-                  port: 3000
                 liveness:
                   enabled: true
                   type: http
                   path: /
-                  port: 3000
+                  port: 3001
                 readiness:
                   enabled: true
                   type: http
                   path: /
-                  port: 3000
-
-    cnpg:
-      main:
-        enabled: true
-        database: rocketlife_prod
-        user: rocketuser_prod
-        mode: standalone
-        backups:
-          enabled: false
+                  port: 3001
