--- a/clusters/main/kubernetes/apps/docuseal-dev/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/docuseal-dev/app/helm-release.yaml
@@ -106,4 +106,6 @@ spec:
               env:
                 X_FRAME_OPTIONS: "ALLOWALL"
                 HOST: "https://sign-dev.${DOMAIN_4}"
+                APP_URL: "https://sign-dev.${DOMAIN_4}"
+                FORCE_SSL: "true"
 
