--- a/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
@@ -89,39 +89,39 @@ spec:
           certManager:
             enabled: true
             certificateIssuer: domain-0-le-prod  
-    persistence:
-      config:
-        storageClass: ceph-filesystem
-        size: 10Gi
-        accessModes:
-          - ReadWriteMany
-        targetSelector:
-          main:
-            main:
-              mountPath: /opt/trueconf/server/var/lib
-        volsync:
-          - name: b2
-            type: restic
-            credentials: s3
-            dest:
-              volumeSnapshotClassName: ceph-filesystem
-              enabled: true
-            src:
-              volumeSnapshotClassName: ceph-filesystem
-              enabled: true
-              trigger:
-                schedule: "30 14 * * *"
-    cnpg:
-      main:
-        # mode: recovery # Set to 'recovery' when recovery from S3, also change the revisions
-        backups:
-          enabled: true
-          credentials: s3
-          retentionPolicy: "14d"
-          revision: "1"
-        recovery:
-          credentials: s3
-          revision: ""  
+    # persistence:
+    #   config:
+    #     storageClass: ceph-filesystem
+    #     size: 10Gi
+    #     accessModes:
+    #       - ReadWriteMany
+    #     targetSelector:
+    #       main:
+    #         main:
+    #           mountPath: /opt/trueconf/server/var/lib
+    #     volsync:
+    #       - name: b2
+    #         type: restic
+    #         credentials: s3
+    #         dest:
+    #           volumeSnapshotClassName: ceph-filesystem
+    #           enabled: true
+    #         src:
+    #           volumeSnapshotClassName: ceph-filesystem
+    #           enabled: true
+    #           trigger:
+    #             schedule: "30 14 * * *"
+    # cnpg:
+    #   main:
+    #     # mode: recovery # Set to 'recovery' when recovery from S3, also change the revisions
+    #     backups:
+    #       enabled: true
+    #       credentials: s3
+    #       retentionPolicy: "14d"
+    #       revision: "1"
+    #     recovery:
+    #       credentials: s3
+    #       revision: ""  
 
             
          
