--- a/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
@@ -55,16 +55,16 @@ spec:
       main:
         type: ClusterIP
         ports:
-          # main:
-          #   enabled: true
-          #   port: 443
-          #   protocol: https
-          #   targetPort: 443
-          # http:
-          #   enabled: true
-          #   port: 80
-          #   protocol: http
-          #   targetPort: 80
+          main:
+            enabled: true
+            port: 443
+            protocol: https
+            targetPort: 443
+          http:
+            enabled: true
+            port: 80
+            protocol: http
+            targetPort: 80
           trueconf:
             enabled: true
             port: 4307
