--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -25,4 +25,4 @@ resources:
   - etesync-dav/ks.yaml
   - dockerregistry/ks.yaml
   - docuseal-dev/ks.yaml
-  - trueconf/ks.yaml
+  # - trueconf/ks.yaml
