--- a/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
@@ -40,7 +40,8 @@ spec:
     TZ: America/Chicago 
     resources:
       requests:
-        cpu: 10m      
+        cpu: 10m
+        memory: 100Mi      
     global:
       stopAll: false 
     credentials:
