--- a/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
@@ -62,12 +62,12 @@ spec:
       main:
         type: ClusterIP
         ports:
+          # main:
+          #   enabled: true
+          #   port: 443
+          #   protocol: https
+          #   targetPort: 443
           main:
-            enabled: true
-            port: 443
-            protocol: https
-            targetPort: 443
-          http:
             enabled: true
             port: 80
             protocol: http
