--- a/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
@@ -99,10 +99,8 @@ spec:
     persistence:
       config:
         enabled: true
-        storageClass: ceph-filesystem
+        storageClass: ceph-block
         size: 10Gi
-        accessModes:
-          - ReadWriteMany
         targetSelector:
           main:
             main:
