--- a/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
@@ -48,6 +48,9 @@ spec:
         runAsNonRoot: false
         runAsUser: 0
         runAsGroup: 0
+        capabilities:
+          add:
+            - SETFCAP
     global:
       stopAll: false 
     credentials:
