--- a/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 15.29.38
+      version: 15.29.37
       sourceRef:
         kind: HelmRepository
         name: truecharts
@@ -108,18 +108,16 @@ spec:
           main:
             main:
               mountPath: /opt/trueconf/server/var/lib
-    #     volsync:
-    #       - name: b2
-    #         type: restic
-    #         credentials: s3
-    #         dest:
-    #           volumeSnapshotClassName: ceph-filesystem
-    #           enabled: true
-    #         src:
-    #           volumeSnapshotClassName: ceph-filesystem
-    #           enabled: true
-    #           trigger:
-    #             schedule: "30 14 * * *"
+        volsync:
+          - name: b2
+            type: restic
+            credentials: s3
+            dest:
+              enabled: true
+            src:
+              enabled: true
+              trigger:
+                schedule: "30 14 * * *"
     # cnpg:
     #   main:
     #     # mode: recovery # Set to 'recovery' when recovery from S3, also change the revisions
