--- a/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/trueconf/app/helm-release.yaml
@@ -87,7 +87,11 @@ spec:
             targetPort: 4307
       webrtc:
         enabled: true
+        loadBalancerIP: ${TRUECONF_IP}
         type: LoadBalancer
+        integrations:
+          metallb:
+            enabled: true
         ports:
           webrtc:
             enabled: true
