--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -26,4 +26,4 @@ resources:
   - dockerregistry/ks.yaml
   - docuseal-dev/ks.yaml
   # - trueconf/ks.yaml
-  - ext-trueconf/ks.yaml
+  # - ext-trueconf/ks.yaml
