--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -21,7 +21,7 @@ resources:
   - filebrowser/ks.yaml
   - etesync/ks.yaml
   - rocket-life-dev/ks.yaml
-  # - rocket-life-prod/ks.yaml
+  - rocket-life-prod/ks.yaml
   - etesync-dav/ks.yaml
   - dockerregistry/ks.yaml
   - docuseal-dev/ks.yaml
