--- a/clusters/main/kubernetes/apps/docuseal-dev/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/docuseal-dev/app/helm-release.yaml
@@ -87,7 +87,7 @@ spec:
               schedule: "15 15 * * *"        
     cnpg:
       main:
-        # mode: recovery   # Set to 'recovery' when recovery from S3, also change the revisions 
+        mode: recovery   # Set to 'recovery' when recovery from S3, also change the revisions 
         backups:
           enabled: true  # Set to 'false' when performing new install (recovery)
           credentials: s3
@@ -97,7 +97,7 @@ spec:
               backupOwnerReference: self
               immediate: true
               suspend: false          
-          revision: "1"
+          revision: "2"
         recovery:
           method: object_store
           credentials: s3
