--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
   - xteve/ks.yaml
   - nextcloud/ks.yaml
   - speedtest-tracker/ks.yaml
-  - stun-turn/ks.yaml
+  # - stun-turn/ks.yaml
   # - rustdesk/ks.yaml
   - docuseal/ks.yaml
   - joplin/ks.yaml  
