--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -15,7 +15,7 @@ resources:
   # - stun-turn/ks.yaml
   # - rustdesk/ks.yaml
   - docuseal/ks.yaml
-  - joplin/ks.yaml  
+  # - joplin/ks.yaml  
   # - authentik/ks.yaml
   # - rdgen/ks.yaml
   - filebrowser/ks.yaml
